fixing layout bug mobile

--- a/main.css
+++ b/main.css
@@ -6,10 +6,11 @@
 html {
   height: 100vh;
   font-size: 14px;
+  overflow: hidden;
 }
 body {
   background-color: hsl(218, 23%, 16%);
-  height: 100vh;
+  height: 100%;
   color: hsl(193, 38%, 86%);
   font-family: "Manrope";
   text-align: center;
@@ -81,9 +82,23 @@ section div:last-of-type {
   button:hover {
     box-shadow: hsl(150, 100%, 66%) 0px 0px 36px 0px;
   }
+  .attribution {
+    bottom: 50px;
+  }
 }
 @media (max-width: 600px) {
   button.roll {
     box-shadow: hsl(150, 100%, 66%) 0px 0px 36px 0px;
   }
+  .attribution {
+    bottom: 20px;
+  }
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: absolute;
+}
+a {
+  color: wheat;
 }
